<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="stStation02_Components" Id="{860fe0fd-5b4e-4c6e-a1c8-f93c8ce0df08}">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Stack)]}
TYPE stStation02_Components :
STRUCT
	{attribute addProperty Name "Sensor Y"}
	SensorY : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>