<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="fbStation02" Id="{7577acf3-9ba2-4cd6-93de-986f8b37e5a4}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Tabs)]}
{attribute addProperty Name "ST 02"}
FUNCTION_BLOCK fbStation02
VAR
	{attribute wpf [Container(Layout.Stack)]}
	{attribute addProperty Name "Compare"}
	_compare : BOOL;
	{attribute addProperty Name "Data"}
	_data : stStation02_Data;
	{attribute addProperty Name "Components"}
	_components : stStation02_Components;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_data.DimYMeasured := _components.SensorY;
IF(_data.DimYMin <= _data.DimYMeasured AND
 	_data.DimYMeasured <= _data.DimYMax) THEN	
	_data.Result := 'ALL OK';
ELSE
	_data.Result := 'THIS IS NOT OK';
END_IF]]></ST>
    </Implementation>
    <LineIds Name="fbStation02">
      <LineId Id="20" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="17" Count="2" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>